--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of a Cyber Security Expert">
-    <title>Your Name | Cyber Security Expert</title>
+    <title>Rakibul Hasan Sagor| Cyber Security Expert</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
 
     <!-- Home Section -->
     <section id="home">
-        <h1>Your Name</h1>
+        <h1>Rakibul Hasan Sagor</h1>
         <p>Aspiring Cybersecurity Expert | Passionate Coder</p>
         <a href="#contact" class="btn">Get in Touch</a>
     </section>
@@ -90,7 +90,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2023 Your Name. All rights reserved.</p>
+        <p>© 2023 Rakibul Hasan Sagor. All rights reserved.</p>
     </footer>
 
     <!-- Back to Top Button -->
