--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of a Cyber Security Expert">
-    <title>Your Name | Cyber Security Expert</title>
+    <title>Rakibul Hasan Sagor | Cyber Security Expert</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
